@@ -51,6 +51,9 @@ void initbc(bc *bc, SDL_Surface *surf, int xsize, int ysize)
 }
 
 
+#ifdef WIN32_BUILD
+#undef main
+#endif
 int main(int argc,char **argv)
 {
 int videoflags;
@@ -119,3 +122,5 @@ int v1,v2;
 	SDL_Quit();
 	return 0;
 }
+
+#undef main
